form covers load view correctly, added measurement abbreviations

--- a/app/view/load-book/load-book.scss
+++ b/app/view/load-book/load-book.scss
@@ -35,8 +35,9 @@
     position: fixed;
     top: 0;
     width: 60vw;
+    height: 100vh;
     font-size: 1.5em;
-    margin-top: 10px;
+    padding-top: 10px;
     background-color: white;
 
     .cancel-form-button {
